<resources>
    <string name="app_name">CalculosAPP</string>
    <string name="opciones">Opciones</string>
    <string name="areas">Áreas</string>
    <string name="area_cuadrado">Área Cuadrado</string>
    <string name="area_circulo">Área Círculo</string>
    <string name="area_rec">Área Rectángulo</string>
    <string name="area_tri">Área Triángulo</string>
    <string name="volumnes">Volúmenes</string>
    <string name="volumnen_esfera">Volúmenen Esfera</string>
    <string name="volumnen_cubo">Volúmen Cubo</string>
    <string name="volumnen_cono">Volúmen Cono</string>
    <string name="volumnen_cilindro">Volúmen Cilindro</string>
    <string name="operaciones_realiadas">Operaciones Realizadas</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="triangulo">Triángulo</string>
    <string name="circulo">Círculo</string>
    <string name="esfera">Esfera</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string name="lado_cuadrado">Lado:</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="ok">OK</string>
    <string name="resultado">Resultado</string>
    <string name="lado_base">Lado Base:</string>
    <string name="lado_altura">Lado Altura:</string>
    <string name="radio">Radio:</string>
    <string name="altura">Altura:</string>
    <string name="numero">No</string>
    <string name="operaciones">Operaciones</string>
    <string name="datos">Datos</string>
    <string name="guardar">Guardar</string>
    <string name="guardado_exitosamente">Operación Guardada éxitosamente</string>
    <string name="ingrese_radio">Ingrese radio</string>
    <string name="ingrese_altura">Ingrese altura</string>
    <string name="ingrese_lado">Ingrese lado</string>
    <string name="ingrese_lado_base">Ingrese lado base</string>
    <string name="ingrese_lado_altura">Ingrese lado altura</string>

    <string-array name="opciones">
        <item>@string/areas</item>
        <item>@string/volumnes</item>
        <item>@string/operaciones_realiadas</item>
    </string-array>

    <string-array name="figuras_area">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>

    <string-array name="figuras_volumen">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
</resources>