<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcularCuadrado">

    <TextView
        android:id="@+id/txtCuadrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cuadrado"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textLadoCuadrado"
            android:layout_width="297dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:hint="@string/lado_cuadrado" />

        <EditText
            android:id="@+id/txtLado"
            android:layout_width="195dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/borrar"
            android:onClick="limpiar" />
    </LinearLayout>

</LinearLayout>