<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcularRectangulo">

    <TextView
        android:id="@+id/lblCalcularTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rectangulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="215dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblLadoBase"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:hint="@string/lado_base" />

            <TextView
                android:id="@+id/lblLadoAltura"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/lado_altura" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtLadoBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtLadoAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcularRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/calcular" />

        <Button
            android:id="@+id/btnBorrarRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/borrar" />
    </LinearLayout>
</LinearLayout>