<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcularTriangulo">

    <TextView
        android:id="@+id/lblTituloTri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/triangulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="210sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblLadoBaseT"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/lado_base" />

            <TextView
                android:id="@+id/LadoAlturaT"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/lado_altura" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textLadoBaseT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtLadoAlturaT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcularTri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnBorrarTi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/borrar"
            android:onClick="limpiar" />
    </LinearLayout>
</LinearLayout>