<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcularCubo">

    <TextView
        android:id="@+id/lblCalcularCubo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cubo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblLadoCubo"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lado_cuadrado"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtLadoCubo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcularCubo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/calcular" />

        <Button
            android:id="@+id/btnBorrarCubo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/borrar"
            android:onClick="limpiar" />
    </LinearLayout>
</LinearLayout>