<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultadoCirculo">

    <TextView
        android:id="@+id/lblTituloCir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/circulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblResultadoCir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resultado"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResultadoCir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOkCir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ok" />
</LinearLayout>