<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultadoTriangulo">

    <TextView
        android:id="@+id/lblTituloTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/triangulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblResultadoTri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rectangulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResultadoTri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOkTri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ok" />
</LinearLayout>