<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcularCilindro">

    <TextView
        android:id="@+id/lblCalcularCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cilindro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="215sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblRadioCilindro"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/radio"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblAlturaCilindro"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:hint="@string/altura"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtRadioCilindro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtAlturaCilindro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcularCilindro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/calcular" />

        <Button
            android:id="@+id/btnBorrarCilindro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/borrar"
            android:onClick="limpiar" />
    </LinearLayout>
</LinearLayout>